Migrated project from non-modular to modular, migrated UI library to MaterialFX
Signed-off-by: Kumar Pranjal <kpranjal2047@gmail.com>